--- a/styles/abstracts/mixins/structure.scss
+++ b/styles/abstracts/mixins/structure.scss
@@ -1,9 +1,12 @@
+@import '../variables/structure.scss';
+@import './breakpoints.scss';
+
 @mixin container {
 	width: 100%;
 	position: relative;
 	max-width: $content-max-width;
 	margin: 0 auto;
-	padding: 0 $indent__l;
+	padding: $indent__base $indent__l;
 
     @include min-screen($screen__lg) {
 		padding: 0 $indent__2xl;
