--- a/styles/global.scss
+++ b/styles/global.scss
@@ -1,10 +1,13 @@
+@import './abstracts/variables/typography.scss';
+@import './utilities/typography.scss';
+@import './base/typography.scss';
+
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-    border: 2px solid green;
 }
 
 a {
