--- a/styles/abstracts/variables/typography.scss
+++ b/styles/abstracts/variables/typography.scss
@@ -6,6 +6,7 @@ $font__main: Roboto, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxyg
 $font__code: monaco, consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
 $font__headings: Rubik, Roboto, Arial, -apple-system, sans-serif;
 $font__pre: "Courier 10 Pitch", courier, monospace;
+
 $font__line-height-body: 1.6;
 $font__line-height-pre: 1.6;
 $font__line-height__l: 1.6;
@@ -14,19 +15,22 @@ $font__line-height__2xl: 1;
 $font__line-height__3xl: 1;
 $font__line-height__4xl: 1;
 
-$font-size__xs: .625rem;
-$font-size__s: .875rem;
-$font-size__base: 1rem; // 16px
-$font-size__l: 1.25rem; // 20px
-$font-size__xl: 1.6rem; // 25.6px
-$font-size__2xl: 1.875rem; // 30px
-$font-size__3xl: 2.625rem; // 42px
-$font-size__4xl: 3.625em; // 58px
-$font-size__5xl: 4.5rem;
-$font-size__6xl: 5.25rem;
+$font-size__xs: 0.75rem; /* 12px */
+$font-size__s: 0.875rem; /* 14px */
+$font-size__base: 1rem; /* 16px */
+$font-size__l: 1.125rem; /* 18px */
+$font-size__xl: 1.25rem; /* 20px */
+$font-size__2xl: 1.5rem; /* 24px */
+$font-size__3xl: 1.875rem; /* 30px */
+$font-size__4xl: 2.25rem; /* 36px */
+$font-size__5xl: 3rem; /* 48px */
+$font-size__6xl: 3.75rem; /* 60px */
+$font-size__7xl: 4.5rem; /* 72px */
+$font-size__8xl: 6rem; /* 96px */
+$font-size__9xl: 8rem; /* 128px */
 
 $font-weight__regular: 400;
 $font-weight__medium: 500;
-// $font-weight__semibold: 600;
+$font-weight__semibold: 500;
 $font-weight__bold: 600;
 $font-weight__extrabold: 800;
