--- a/styles/global.scss
+++ b/styles/global.scss
@@ -1,13 +1,12 @@
 @import './abstracts/variables/typography.scss';
-@import './utilities/typography.scss';
 @import './base/typography.scss';
+@import './base/elements/buttons.scss';
+@import './utilities/utilities.scss';
 
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 a {
