--- a/styles/global.scss
+++ b/styles/global.scss
@@ -1,4 +1,5 @@
 @import './abstracts/variables/typography.scss';
+@import './abstracts/variables/structure.scss';
 @import './base/typography.scss';
 @import './base/elements/buttons.scss';
 @import './utilities/utilities.scss';
