--- a/styles/utilities/utilities.scss
+++ b/styles/utilities/utilities.scss
@@ -1,3 +1,5 @@
+@import '../abstracts/variables/structure.scss';
+
 .hidden {
     display: none;
 }
@@ -7,4 +9,10 @@
     opacity: 0;
     position: absolute;
     left: -200vw;
+}
+
+.align-center {
+    text-align: center;
+    margin: 0 auto;
+    justify-content: center;
 }
