Add loading state to search results

--- a/styles/modules/PostGrid.module.scss
+++ b/styles/modules/PostGrid.module.scss
@@ -4,7 +4,9 @@
 .post-grid {
     @include container;
 
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: $indent__base;
+    &__items {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-gap: $indent__base;
+    }
 }
