--- a/styles/abstracts/variables/structure.scss
+++ b/styles/abstracts/variables/structure.scss
@@ -36,6 +36,7 @@ $content-y-spacing: $indent__4xl;
 
 $border-radius: 25px;
 $border-radius__buttons: 25px;
+$border-width__buttons: 2px;
 
 $header-height: 86px;
 
