--- a/styles/modules/Navigation.module.scss
+++ b/styles/modules/Navigation.module.scss
@@ -7,15 +7,14 @@
     &__list {
         display: flex;
         gap: $indent__base;
-    }
-
-    &__item {
         @include listReset(); // abstracts/mixins/utilities.module.scss
     }
 
-    &__link {
-        
-    }
+    // &__item {
+    // }
+
+    // &__link {
+    // }
 
     &__skip-link {
         position: fixed;
