--- a/styles/abstracts/variables/structure.scss
+++ b/styles/abstracts/variables/structure.scss
@@ -35,7 +35,7 @@ $indent__7xl: 9.375rem;
 $content-y-spacing: $indent__4xl;
 
 $border-radius: 25px;
-$border-radius__buttons: 25px;
+$border-radius__buttons: 0;
 $border-width__buttons: 2px;
 
 $header-height: 86px;
