--- a/styles/modules/PostGrid.module.scss
+++ b/styles/modules/PostGrid.module.scss
@@ -1,5 +1,6 @@
 @import '../abstracts/variables/structure.scss';
 @import '../abstracts/variables/colors.scss';
+@import '../abstracts/variables/typography.scss';
 @import '../abstracts/mixins/structure.scss';
 @import '../abstracts/mixins/breakpoints.scss';
 
@@ -10,6 +11,7 @@
         display: grid;
         grid-template-columns: 1fr;
         grid-gap: $indent__base;
+        position: relative;
 
         @include min-screen($screen__md) {
             grid-template-columns: repeat(2, 1fr);
@@ -18,6 +20,33 @@
         @include min-screen($screen__lg) {
             grid-template-columns: repeat(3, 1fr);
         }
+
+        &::after {
+            content: 'Loading...';
+            display: block;
+            position: absolute;
+            left: 0;
+            top: 0;
+            bottom: 0;
+            right: 0;
+            opacity: 0;
+            pointer-events: none;
+            background-color: rgba($white, 0.6);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: $font-size__2xl;
+            font-weight: $font-weight__bold;
+            transition: all ease-in-out .08s;
+            z-index: 100;
+        }
+
+        &.-loading {
+            &::after {
+                opacity: 1;
+                pointer-events: all;
+            }
+        }
     }
 
     .post {
@@ -25,17 +54,13 @@
         display: flex;
         flex-direction: column;
         gap: $indent__base;
-
-        &__thumbnail img {
-            box-shadow: $box-shadow__base;            
-        }
-
+        
         &__tags {
             position: absolute;
             z-index: 10;
-            top: $indent__base;
-            left: $indent__base;
-            right: $indent__base;
+            top: $indent__s;
+            left: $indent__s;
+            right: $indent__s;
         }
     }
 }
