--- a/styles/modules/TagsFilter.module.scss
+++ b/styles/modules/TagsFilter.module.scss
@@ -5,7 +5,8 @@
 .tag-filter {
     // @include container;
     display: flex;
-    gap: $indent__base;
+    flex-flow: row wrap;
+    gap: $indent__s;
     @include listReset(); // abstracts/mixins/utilities.module.scss
 
     &__item {
