--- a/styles/modules/TagsFilter.module.scss
+++ b/styles/modules/TagsFilter.module.scss
@@ -24,5 +24,9 @@
         input:checked + label {
             @extend %pill--active;
         }
+
+        &:focus-within, &:focus-visible {
+            outline: $border-width__buttons solid $primary-color;
+        }
     }
 }
