Update heading styles formatting, add basic pre styles

--- a/styles/abstracts/variables/structure.scss
+++ b/styles/abstracts/variables/structure.scss
@@ -36,6 +36,7 @@ $content-y-spacing: $indent__4xl;
 
 $border-radius: 25px;
 $border-radius__buttons: 0;
+$border-radius__pre: 4px;
 $border-width__buttons: 2px;
 
 $header-height: 86px;
