--- a/styles/global.scss
+++ b/styles/global.scss
@@ -3,6 +3,7 @@
 @import './base/typography.scss';
 @import './base/elements/buttons.scss';
 @import './utilities/utilities.scss';
+@import './utilities/typography.scss';
 
 html,
 body {
@@ -30,4 +31,28 @@ a {
 img {
   max-width: 100%;
   height: auto;
+}
+
+h1 {
+  @extend %h1;
+}
+
+h2 {
+  @extend %h2;
+}
+
+h3 {
+  @extend %h3;
+}
+
+h4 {
+  @extend %h4;
+}
+
+h5 {
+  @extend %h5;
+}
+
+h6 {
+  @extend %h6;
 }
